--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container">
-
-        <h1 class="title">My To-Do List</h1>
-
+        <div class="todo-app">
+            <h2>My-To-Do List <</h2>
+        </div>
     </div>
 
 </body>
