--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>My-To-Do List <</h2>
+            <h2>My-To-Do List</h2>
         </div>
     </div>
 
