--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY-TO-DO-LIST</title>
-    <!-- Poppins font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="todo-app">
-            <h2>My-To-Do List</h2>
+            <h2>My-To-Do List <img src="images/icon.png"></h2>
         </div>
     </div>
 
