--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <div class="container">
         <div class="todo-app">
             <h2>My-To-Do List <img src="images/icon.png"></h2>
+            <div class="row">
+                <input type="text" class="task-input" placeholder="Add a new task...">
+                <button class="add-btn">Add</button>
+            </div>
         </div>
     </div>
 
