--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY-TO-DO-LIST</title>
+    <!-- Poppins font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="todo-app">
-            <h2>My-To-Do List <img src="images/icon.png"></h2>
-            <div class="row">
-                <input type="text" class="task-input" placeholder="Add a new task...">
-                <button class="add-btn">Add</button>
-            </div>
+<div class="container">
+    <div class="todo-app">
+        <h2>My-To-Do List <img src="images/icon.png" alt="app icon"></h2>
+        <div class="row">
+            <input id="input-box" placeholder="Add a new task...">
+            <button onclick="addTask()">Add</button>
         </div>
-    </div>
-
+        <ul id="list-container">
+                <!-- <li class="checked">Task 1</li>
+                <li>Task 2</li>
+                <li>Task 3</li> -->
+            </ul>
+        </div>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
